<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/common_padding_min"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_operation"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline4"
        tools:text="5x2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyTextView"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_height="0dp"
        android:textAppearance="?attr/textAppearanceHeadline2"
        android:layout_marginBottom="@dimen/common_padding_min"
        tools:text="10.0"
        android:gravity="center_vertical|end"
        app:layout_constraintTop_toBottomOf="@id/tv_operation"
        app:layout_constraintBottom_toTopOf="@id/ll_top"
        style="@style/MyTextView"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:id="@+id/ll_top"
        app:layout_constraintBottom_toTopOf="@id/ll_pre_top"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_clear"
            android:layout_weight="50"
            android:text="@string/calc_btn_clear"
            android:textSize="@dimen/calc_btn_text_size"
            android:backgroundTint="@color/red_500"
            style="@style/MyButtonBase" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_weight="24"
            android:backgroundTint="@color/light_blue_800"
            app:icon="@drawable/ic_backspace"
            app:iconSize="@dimen/calc_btn_delete_size"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/common_padding_none"
            style="@style/MyButtonBase"/>
        <Button
            android:id="@+id/btn_div"
            android:layout_weight="24"
            android:text="@string/calc_btn_div"
            android:textSize="@dimen/calc_btn_sum_size"
            style="@style/ButtonOperator"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pre_top"
        app:layout_constraintBottom_toTopOf="@id/ll_middle"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_seven"
            android:text="@string/calc_btn_seven"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_eight"
            android:text="@string/calc_btn_eight"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_nine"
            android:text="@string/calc_btn_nine"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_mult"
            android:text="@string/calc_btn_mult"
            style="@style/ButtonOperator"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_middle"
        app:layout_constraintBottom_toTopOf="@id/ll_pre_bottom"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_four"
            android:text="@string/calc_btn_four"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_five"
            android:text="@string/calc_btn_five"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_six"
            android:text="@string/calc_btn_six"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_sub"
            android:text="@string/calc_btn_sub"
            android:textSize="@dimen/calc_btn_sub_size"
            style="@style/ButtonOperator"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pre_bottom"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_one"
            android:text="@string/calc_btn_one"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_two"
            android:text="@string/calc_btn_two"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_three"
            android:text="@string/calc_btn_three"
            style="@style/ButtonNums"/>
        <Button
            android:id="@+id/btn_sum"
            android:text="@string/calc_btn_sum"
            android:textSize="@dimen/calc_btn_sum_size"
            style="@style/ButtonOperator"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_point"
            android:layout_weight="24"
            android:text="@string/calc_btn_point"
            android:textSize="@dimen/calc_btn_sub_size"
            android:backgroundTint="@color/light_blue_800"
            style="@style/MyButtonBase"/>
        <Button
            android:id="@+id/btn_zero"
            android:layout_weight="24"
            android:text="@string/calc_btn_cero"
            android:textSize="@dimen/calc_btn_text_size"
            android:backgroundTint="@color/teal_800"
            style="@style/MyButtonBase"/>
        <Button
            android:id="@+id/btn_resolve"
            android:layout_weight="50"
            android:text="@string/calc_btn_resolve"
            android:textSize="@dimen/calc_btn_sum_size"
            android:backgroundTint="@color/light_blue_800"
            style="@style/MyButtonBase"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>